# uvrpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLibuv.cmake
include/: uvrpc.h
script/: install_libuv.sh
src/: uvrpc.c  uvrpc.h
src/test/: uvrpc_client_echo.c  uvrpc_client_file_blackhole.c  uvrpc_client_test.c  uvrpc_server_echo.c  uvrpc_server_file_blackhole.c  uvrpc_server_test.c
src/utils/: blockQueue.c  blockQueue.h  int2bytes.c  int2bytes.h
